# adventofcode

./: .editorconfig  README.md
2021/python/: README.md  pyproject.toml  setup.cfg
2021/python/adventofcode/: __init__.py
2021/python/notebooks/: day1.ipynb  day2.ipynb  day3.ipynb
2022/rust/: Cargo.toml
2023/cpp/: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  day1_part2.cpp  day2_part2.cpp
2023/cpp/apps/day1/: CMakeLists.txt  day1_part2.cpp
2023/cpp/apps/day2/: CMakeLists.txt  day2_part1.cpp  day2_part2.cpp
2023/cpp/apps/day3/: CMakeLists.txt  day3_part1.cpp
2023/cpp/cmake/: CCache.cmake  ClangTidy.cmake  Cppcheck.cmake
2023/cpp/day1/: CMakeLists.txt  day1_part1.cpp  day1_part2.cpp
2023/cpp/day2/: CMakeLists.txt
2023/cpp/scripts/: new_day.sh
