[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["tjquillan <tjquillan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
flake8-annotations = "^2.7.0"
flake8-bugbear = "^21.11.29"
flake8-comprehensions = "^3.7.0"
ipykernel = "^6.6.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
